--- a/goksoyakademi/frontend/src/components/navbar/navbar.css
+++ b/goksoyakademi/frontend/src/components/navbar/navbar.css
@@ -5,6 +5,7 @@
   font-family: "Red Hat Display", sans-serif;
   font-weight: 400;
   font-size: large;
+  /* color: #f4f9f9 !important; */
 }
 
 #light .navbar-bg {
@@ -41,12 +42,9 @@
   color: rgb(255, 255, 255);
 }
 
-
-.navbar-text{
-
+.navbar-text {
   display: inline-block;
 }
-
 
 #light .spans {
   color: #ffffff;
@@ -61,6 +59,9 @@
   display: flex !important;
   align-items: center !important;
   justify-content: space-between !important;
+}
+#dark .nav-link {
+  color: #ffffff !important;
 }
 /* navlinks */
 
@@ -80,5 +81,6 @@
   transition: 0.5s;
 } */
 #dark .navlink-hover:hover {
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  /* border: 1px solid rgba(255, 255, 255, 0.5); */
+  background-color: rgba(255, 255, 255, 0.1);
 }
