--- a/goksoyakademi/frontend/static/frontend/css/main.css
+++ b/goksoyakademi/frontend/static/frontend/css/main.css
@@ -106,6 +106,7 @@ input:checked + .slider:before {
   font-family: "Red Hat Display", sans-serif;
   font-weight: 400;
   font-size: large;
+  /* color: #f4f9f9 !important; */
 }
 
 #light .navbar-bg {
@@ -142,12 +143,9 @@ input:checked + .slider:before {
   color: rgb(255, 255, 255);
 }
 
-
-.navbar-text{
-
+.navbar-text {
   display: inline-block;
 }
-
 
 #light .spans {
   color: #ffffff;
@@ -162,6 +160,9 @@ input:checked + .slider:before {
   display: flex !important;
   align-items: center !important;
   justify-content: space-between !important;
+}
+#dark .nav-link {
+  color: #ffffff !important;
 }
 /* navlinks */
 
@@ -181,7 +182,8 @@ input:checked + .slider:before {
   transition: 0.5s;
 } */
 #dark .navlink-hover:hover {
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  /* border: 1px solid rgba(255, 255, 255, 0.5); */
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 /*!************************************************************************************!*\
