--- a/goksoyakademi/static/frontend/css/main.css
+++ b/goksoyakademi/static/frontend/css/main.css
@@ -106,6 +106,7 @@ input:checked + .slider:before {
   font-family: "Red Hat Display", sans-serif;
   font-weight: 400;
   font-size: large;
+  color: #f4f9f9 !important;
 }
 
 #light .navbar-bg {
@@ -142,12 +143,9 @@ input:checked + .slider:before {
   color: rgb(255, 255, 255);
 }
 
-
-.navbar-text{
-
+.navbar-text {
   display: inline-block;
 }
-
 
 #light .spans {
   color: #ffffff;
@@ -158,7 +156,8 @@ input:checked + .slider:before {
 }
 
 .nav-link {
-  color: #000000 !important;
+  /* color: #000000 !important; */
+  color: #f4f9f9 !important;
   display: flex !important;
   align-items: center !important;
   justify-content: space-between !important;
@@ -347,7 +346,6 @@ input:checked + .slider:before {
 }
 #dark .false-button {
   border: solid 1px rgb(201, 58, 58);
-
 }
 
 .disabled-choice {
@@ -704,4 +702,3 @@ button[disabled] {
   color: #666666;
   cursor: not-allowed;
 }
-
