--- a/goksoyakademi/static/frontend/css/main.css
+++ b/goksoyakademi/static/frontend/css/main.css
@@ -1,12 +1,6 @@
-/*!****************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./src/components/dropdown/Dropdown.css ***!
-  \****************************************************************************************/
 .dropdown {
 }
 
-/*!*************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./src/pages/introduce/Introduce.css ***!
-  \*************************************************************************************/
 .introduce {
   /* font-family: "Anek Bangla", sans-serif; */
   align-items: center;
@@ -31,9 +25,6 @@
   color: #1a1e50;
 }
 
-/*!************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./src/components/navbar/switch.css ***!
-  \************************************************************************************/
 .switch {
   position: absolute;
   display: inline-block;
@@ -96,9 +87,6 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
-/*!************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./src/components/navbar/navbar.css ***!
-  \************************************************************************************/
 .custom-navbar {
   margin-left: auto;
   margin-right: auto;
@@ -106,7 +94,7 @@ input:checked + .slider:before {
   font-family: "Red Hat Display", sans-serif;
   font-weight: 400;
   font-size: large;
-  color: #f4f9f9 !important;
+  /* color: #f4f9f9 !important; */
 }
 
 #light .navbar-bg {
@@ -156,11 +144,13 @@ input:checked + .slider:before {
 }
 
 .nav-link {
-  /* color: #000000 !important; */
-  color: #f4f9f9 !important;
+  color: #000000 !important;
   display: flex !important;
   align-items: center !important;
   justify-content: space-between !important;
+}
+#dark .nav-link {
+  color: #ffffff !important;
 }
 /* navlinks */
 
@@ -180,12 +170,10 @@ input:checked + .slider:before {
   transition: 0.5s;
 } */
 #dark .navlink-hover:hover {
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  /* border: 1px solid rgba(255, 255, 255, 0.5); */
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
-/*!************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./src/components/footer/footer.css ***!
-  \************************************************************************************/
 .custom-footer {
   padding: 20px;
   margin-top: auto;
@@ -212,9 +200,6 @@ input:checked + .slider:before {
   padding-left: 15vh;
 }
 
-/*!***************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./src/pages/quiz/Quiz.css ***!
-  \***************************************************************************/
 .quiz {
   /* min-width: 60vh;
   max-width: 60vh; */
@@ -346,6 +331,7 @@ input:checked + .slider:before {
 }
 #dark .false-button {
   border: solid 1px rgb(201, 58, 58);
+
 }
 
 .disabled-choice {
@@ -367,9 +353,6 @@ input:checked + .slider:before {
   pointer-events: none;
 }
 
-/*!***************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./src/App.css ***!
-  \***************************************************************/
 body {
   /* width: 100%; */
   margin: 0px;
@@ -451,9 +434,6 @@ body {
   }
 }
 
-/*!************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./src/components/navbar/banner.css ***!
-  \************************************************************************************/
 .banner {
   padding: 4px;
   width: 100%;
@@ -465,9 +445,6 @@ body {
   /* margin-top: 1vh; */
 }
 
-/*!***********************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./src/pages/homepage/homepage.css ***!
-  \***********************************************************************************/
 #light .task-card {
   background: rgba(255, 255, 255, 0.85);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
@@ -582,15 +559,9 @@ body {
   background-image: linear-gradient(to right, #23c947, #0cfdfd);
 }
 
-/*!*************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./src/pages/dashboard/dashboard.css ***!
-  \*************************************************************************************/
 .dashboard {
 }
 
-/*!**************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./src/components/forms/loginform.css ***!
-  \**************************************************************************************/
 .basicform {
   text-align: start !important ;
 
@@ -702,3 +673,4 @@ button[disabled] {
   color: #666666;
   cursor: not-allowed;
 }
+
